--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ img {
   border: 2px solid rgba(82, 82, 82, 0.326);
 }
 
+.icon {
+  width: auto;
+  color: white;
+  font-size: 40px;
+}
+
 body {
   background-image: linear-gradient(360deg, white 79.9%, red);
 }
@@ -48,12 +54,31 @@ body footer {
   height: 350px;
   background-color: black;
   text-align: center;
+  border: 3px solid red;
 }
 body footer h2 {
   color: white;
 }
-body footer .redes i {
+body footer .contact {
+  height: 50px;
   width: auto;
+  border: 3px solid red;
+  text-align: center;
+}
+body footer .contact i {
+  font-size: 30px;
+  border: 3px solid red;
+}
+body footer .contact p {
   color: white;
-  font-size: 40px;
+  border: 3px solid red;
+  margin: 5px;
+}
+body footer .coment {
+  text-align: center;
+  margin-top: 50px;
+  float: left;
+}
+body footer .coment p {
+  color: white;
 }/*# sourceMappingURL=styles.css.map */
