--- a/styles.scss
+++ b/styles.scss
@@ -10,8 +10,8 @@
 
 .ITEMTEXT {
     float: right;
-    text-align: center;
-    padding: 15px;
+    text-align: left;
+    padding-right: 110px;
 }
 img {
     height: 190px;
@@ -21,13 +21,25 @@ img {
 .ITEMM {
     height: 190px;
     width: 500px;
-    border: 2px solid rgba(82, 82, 82, 0.326);
+    border: 2px solid rgba(31, 30, 30, 0.326);
+    border-radius: 3px;
+    margin-left: 15px;
+    background-color: white;
 }
-
+.ITEM{
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: repeat(6, 300px);
+    grid-gap: 30px;
+}
 .icon {
     width: auto;
     color: white;
     font-size: 40px;
+}
+
+.money{
+    color: rgb(6, 126, 6);
 }
 
 // fin codigos universales
@@ -38,7 +50,6 @@ body{
     header{
         text-align: center;
         height: 130px;
-        border: 2px solid red;
         .menu{
             float: right;
             padding: 15px;
@@ -62,7 +73,6 @@ body{
         height: 350px;
         background-color: black;
         text-align: center;
-        border: 3px solid red;
 
         h2{
             color: white;
@@ -70,16 +80,13 @@ body{
         .contact{
             height: 50px;
             width: auto;
-            border: 3px solid red;
             text-align: center;
 
             i{
                 font-size: 30px;
-                border: 3px solid red;
             }
             p{
                 color: white;
-                border: 3px solid red;
                 margin: 5px;
                 
             }
@@ -94,3 +101,22 @@ body{
         }
         }
     }
+@media only screen and (min-width: 1097px) {
+    .ITEM {
+        grid-template-columns: 3fr 3fr;
+        grid-template-rows: repeat(4, 200px);
+    }
+}
+
+@media only screen and (min-width: 1628px) {
+    .ITEM {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media only screen and (min-width: 1920px) {
+    .ITEM {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: repeat(1, 200px);
+    }
+}
