--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,17 @@ h3 {
   font-family: "Assistant", sans-serif;
 }
 
+#location {
+  text-align: center;
+  margin-top: 120px;
+}
+
+iframe {
+  display: grid;
+  margin: 0 0 150px 10px;
+  box-shadow: inset 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
 .ITEMTEXT {
   float: right;
   text-align: left;
@@ -103,6 +114,23 @@ body header #titulo {
   font-family: "Lobster", cursive;
   font-size: 70px;
 }
+body header .menus {
+  text-align: center;
+  margin-left: 100px;
+  width: 100%;
+}
+body header .menus .btn {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-family: "Assistant", sans-serif;
+  display: inline-block;
+  padding: 3px;
+  border-radius: 4px;
+}
+body header .menus .btn:hover {
+  background-color: white;
+}
 body footer {
   width: auto;
   height: 350px;
@@ -152,6 +180,9 @@ body footer .coment p {
     grid-template-columns: 3fr 3fr;
     grid-template-rows: 4, 200px;
     height: 500px;
+  }
+  header {
+    height: 900px;
   }
 }
 @media only screen and (min-width: 1628px) {
