--- a/styles.scss
+++ b/styles.scss
@@ -13,15 +13,18 @@ h3 {
     text-align: center;
     font-family: 'Assistant', sans-serif;
 }
-#location{
+
+#location {
     text-align: center;
     margin-top: 120px;
 }
-iframe{
+
+iframe {
     display: grid;
     margin: 0 0 150px 10px;
     box-shadow: inset 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
+
 .ITEMTEXT {
     float: right;
     text-align: left;
@@ -105,6 +108,7 @@ body {
     header {
         text-align: center;
         height: 130px;
+        color: black;
 
         .menu {
             float: right;
@@ -116,26 +120,31 @@ body {
             float: left;
             font-size: 70px;
             padding: 20px 0 0 30px;
+            color: black;
         }
 
         #titulo {
             font-family: 'Lobster', cursive;
             font-size: 70px;
+            font-weight: 600;
         }
-        .menus{
+
+        .menus {
             text-align: center;
-            margin-left: 100px;
+            margin-left: 0;
             width: 100%;
-            .btn{
+
+            .btn {
                 text-decoration: none;
                 color: black;
                 font-size: 20px;
-                font-family: 'Assistant',sans-serif;
+                font-family: 'Assistant', sans-serif;
                 display: inline-block;
                 padding: 3px;
                 border-radius: 4px;
             }
-            .btn:hover{
+
+            .btn:hover {
                 background-color: white;
             }
         }
@@ -150,6 +159,8 @@ body {
 
         h2 {
             color: white;
+            font-size: 30px;
+            font-family: 'Lobster', cursive;
         }
 
         .contact {
@@ -170,8 +181,8 @@ body {
 
         .coment {
             text-align: center;
-            margin-top: 50px;
-            float: left;
+            margin-top: px;
+            float: lef;
 
             p {
                 color: white;
@@ -180,8 +191,16 @@ body {
     }
 }
 
+
 @media only screen and (max-width: 1097px) {
     .ITEM {
+        margin-left: 10;
+    }
+    main{
+        margin-top: 100px;
+    }
+
+    .ITEMM{
         margin-left: 10px;
     }
 
@@ -203,7 +222,8 @@ body {
         grid-template-rows: (4, 200px);
         height: 500px;
     }
-    header{
+
+    header {
         height: 900px;
     }
 }
@@ -232,4 +252,68 @@ body {
         grid-template-rows: (1, 200px);
         height: auto;
     }
+}
+
+// login
+
+.main-section {
+    margin: 0 auto;
+    margin-top: 25%;
+    padding: 0;
+}
+
+.modal-content {
+    background-color: #3b4652;
+    opacity: .85;
+    padding: 0 20px;
+    box-shadow: 0px 0px 3px #848484;
+}
+
+.user-img {
+    margin-top: -50px;
+    margin-bottom: 35px;
+}
+
+.user-img img {
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 0px 3px #848484;
+    border-radius: 50%;
+}
+
+.form-group input {
+    height: 42px;
+    font-size: 18px;
+    border: 0;
+    padding-left: 54px;
+    border-radius: 5px;
+}
+
+.form-group::before {
+    font-family: "Font Awesome\ 5 Free";
+    position: absolute;
+    left: 28px;
+    font-size: 22px;
+    padding-top: 4px;
+}
+
+.form-group#user-group::before {
+    content: "\f007";
+}
+
+.form-group#contrasena-group::before {
+    content: "\f023";
+}
+
+button {
+    width: 60%;
+    margin: 5px 0 25px;
+}
+
+.forgot {
+    padding: 5px 0;
+}
+
+.forgot a {
+    color: white;
 }
